--- a/code from scratch/Basic image processing/Basic Image processing (part 2).ipynb
+++ b/code from scratch/Basic image processing/Basic Image processing (part 2).ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Đồ Án 2\n",
-    "#### Họ và tên: Nguyễn Mạnh Hùng\n",
-    "#### MSSV: 20127030"
+    "## Imporved version\n",
+    "#### Họ và tên: Nguyễn Mạnh Hùng"
    ]
   },
   {
